<resources>
    <string name="app_name">番茄工作法</string>
    <string name="username">点击登录</string>
    <string name="dictum">A fall into th pit, a gain in your wit.</string>
    <string name="activity_main_drawer_statistice">统计数据</string>
    <string name="activity_main_drawer_relax">休息</string>
    <string name="activity_main_drawer_menu">菜单</string>
    <string name="activity_main_drawer_future">为来计划表</string>
    <string name="activity_main_drawer_card">季度卡</string>
    <string name="main_activity_add_item">Add</string>
    <string name="activity_add_title">增加一个ToDo</string>
    <string name="activity_add_hint">请输入事件名称</string>
    <string name="activity_add_button">确定</string>
    <string name="activity_count_timer_computer">屏幕常亮</string>
    <string name="activity_count_timer_loop">循环</string>
    <string name="activity_count_timer_exit">返回</string>
    <string name="activity_add_radio_everyday">每天</string>
    <string name="activity_add_radio_oneday">仅今天</string>
    <string name="activity_add_radio_time">45</string>
    <string name="activity_add_radio_default_time">35</string>
    <string name="activity_add_radio_custrom_time">自定义</string>
    <string name="activity_add_radio_short_plan">短期计划</string>
    <string name="activity_add_radio_long_plan">长期计划</string>
    <string name="fragment_more_todo_empty">还未添加办事项哦！</string>
    <!--popwindows-->
    <string name="pop_cancle">取消</string>
    <string name="pop_stick">置顶</string>
    <string name="pop_remind">提醒</string>
    <string name="pop_edit">修改</string>
    <string name="pop_delete">删除</string>
    <string name="pop_mark">标记已完成</string>
    <string name="custrom_time">确定</string>
    <string name="edit_custrom_time">55</string>
    <string name="activity_count_timer_logion">精诚所至,金石为开.</string>
    <string name="content_statistics_item_total">累计数据</string>
    <string name="content_statistics_item_chrild_num">番茄个数</string>
    <string name="content_statistics_item_chrild_time">总计时间</string>
    <string name="activity_main_drawer_setting">更多设置</string>
    <string name="activity_main_drawer_about">关于帮助</string>
    <string name="activity_main_drawer_feedback">反馈建议</string>
    <string name="activity_detail_button">确定</string>
    <string name="edit_long_plan">10000</string>
    <string name="setting_title">设置</string>
    <string name="activity_setting_content_ad_banner">关闭关于页面的广告</string>
    <string name="content_statistics_item_day">今日数据</string>
    <string name="fragment_more_layout_item_button_text">开始</string>
    <string name="activity_login_login">登录</string>
    <string name="activity_login_sign">没有账号？点击注册</string>
    <string name="activity_login_password">输入密码</string>
    <string name="activity_login_email">邮件</string>
</resources>
