<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/activity_main_drawer_menu">
            <menu>
                <item
                    android:id="@+id/nav_camera"
                    android:icon="@mipmap/activity_main_drawer_statistics"
                    android:title="@string/activity_main_drawer_statistice"/>
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@mipmap/activity_main_drawer_relax"
                    android:title="@string/activity_main_drawer_relax"/>
                <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@mipmap/activity_main_drawer_future"
                    android:title="@string/activity_main_drawer_future"/>
                <item
                    android:id="@+id/nav_manage"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/activity_main_drawer_setting"/>
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/nav_share"
            android:title="@string/activity_main_drawer_about"/>
        <item
            android:id="@+id/nav_send"
            android:title="@string/activity_main_drawer_feedback"/>
    </group>
</menu>
