<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/pop_stick"
            android:background="@drawable/pop_window_button_selector_start_radius"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/pop_stick"
            android:textColor="#0e61aa"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC" />

        <Button
            android:id="@+id/pop_remind"
            style="@style/pop_window_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pop_remind"
            android:textColor="#0e61aa"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC" />

        <Button
            android:id="@+id/pop_mark"
            style="@style/pop_window_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pop_mark"
            android:textColor="#0e61aa"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC" />

        <Button
            android:id="@+id/pop_edit"
            style="@style/pop_window_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pop_edit"
            android:textColor="#0e61aa"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC" />

        <Button
            android:id="@+id/pop_delete"
            android:background="@drawable/pop_window_button_selector_end"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pop_delete"
            android:textColor="#0e61aa"
            android:textSize="18sp" />

        <Button
            android:id="@+id/pop_cancel"
            android:background="@drawable/pop_window_button_radius"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:text="@string/pop_cancle"
            android:textColor="#0e61aa"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>