<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_vertical"
        android:background="@color/toolBar"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_add_title_padding"
            android:paddingRight="@dimen/activity_add_title_padding"
            android:text="@string/activity_add_title"
            android:textSize="@dimen/activity_add_title_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/activity_add_content_color"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/activity_item_title"
            style="@style/activity_add_item_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/activity_add_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/main_activity_add_item_commit"
            style="@style/activity_add_item_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/activity_add_button" />
    </LinearLayout>
</LinearLayout>