<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="100dp"
              android:background="@drawable/content_static_linear_radius"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/content_statistics_item_total"
        android:textColor="@color/content_statistics_item_text_color"
        android:textSize="@dimen/content_statistics_item_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="5dp"
        android:background="@color/content_statistics_item_background_line_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_statistics_item_chrild_num"
            android:textColor="@color/content_statistics_item_text_color"
            android:textSize="@dimen/content_statistics_item_text_chrild_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/content_statistics_item_chrild_time"
            android:textColor="@color/content_statistics_item_text_color"
            android:textSize="@dimen/content_statistics_item_text_chrild_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:gravity="center">

        <TextView
            android:id="@+id/content_statistics_item_text_chrild_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/content_statistics_item_text_color"
            android:textSize="@dimen/content_statistics_item_text_chrild_num_size"/>

        <TextView
            android:id="@+id/content_statistics_item_text_chrild_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:text="0"
            android:textColor="@color/content_statistics_item_text_color"
            android:textSize="@dimen/content_statistics_item_text_chrild_num_size"/>
    </LinearLayout>

</LinearLayout>